--- a/example/build.gradle
+++ b/example/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.aliletter.demoedittext"
+        applicationId "com.blackchopper.demoedittext"
         minSdkVersion 14
         targetSdkVersion 26
         versionCode 1
