--- a/libsedittext/build.gradle
+++ b/libsedittext/build.gradle
@@ -1,20 +1,14 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.novoda.bintray-release'
 
 android {
     compileSdkVersion 26
-
-
-
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
-
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -23,12 +17,11 @@ android {
     }
 
 }
-
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+publish{
+    userOrg = 'hacknife'
+    groupId = 'com.hacknife'
+    artifactId = 'edittext'
+    publishVersion = '1.0.3'
+    desc = ''
+    website = 'https://github.com/hacknife/edittext'
 }
